codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell.rs
assertion_line: 3247
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────╮
│  ####  ###  ####  ##### #   #    ####   ###  #   # ##### ##### ####  │
│ #     #   # #   # #      # #     #   # #   # #   #   #   #     #   # │
│ #     #   # #   # #       #      #   # #   # #   #   #   #     #   # │
│ #     #   # #   # ####    #      ####  #   # #   #   #   ####  ####  │
│ #     #   # #   # #       #      # #   #   # #   #   #   #     # #   │
│ #     #   # #   # #      # #     #  #  #   # #   #   #   #     #  #  │
│  ####  ###  ####  ##### #   #    #   #  ###   ###    #   ##### #   # │
│ >_ Codex Router (v1.0.9)                                             │
│ model:     gpt-5   /model to change                                  │
│ directory: /tmp/project                                              │
╰──────────────────────────────────────────────────────────────────────╯

  Tip: Model just became available
